objects/State_Code_List__mdt.object
<CustomObject><fields>
        <fullName>Country_Code_State_Code__c</fullName>
        <description>Store the country code - state code for the country other then US and Canada.</description>
        <label>Country Code-State Code</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Country_Code__c</fullName>
        <description>Store the country code associated to the for the state.</description>
        <label>Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>State_Code__c</fullName>
        <description>Store the state code.</description>
        <label>State Code</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>State_Long_Name_Latin__c</fullName>
        <description>Store the state long name in latin.</description>
        <label>State Long Name Latin</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>State_Long_Name_Local__c</fullName>
        <description>Store the state local long name.</description>
        <label>State Long Name Local</label>
        <length>255</length>
        <type>Text</type>
    </fields><description>Store the different state code name, code and its related country code.</description><label>State Code List</label><pluralLabel>State Code Lists</pluralLabel><visibility>Public</visibility></CustomObject>